--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
     "firebase": "^8.6.8",
+    "firebase-admin": "^9.9.0",
     "framer-motion": "^3.6.7",
+    "js-cookie": "^2.2.1",
     "next": "^11.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^2.2.6",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
