--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "^11.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-hook-form": "^7.9.0",
     "react-icons": "^4.1.0"
   },
   "devDependencies": {
